# bevy_compute_example

./: Cargo.toml
assets/: kernel.wgsl
src/: main.rs
